--- a/main.css
+++ b/main.css
@@ -82,6 +82,24 @@ body {
     margin: 8px 0;
 }
 
+.button {
+    background: #0e4f1f;
+    color: white;
+    /* Forces the inhereted style to be applied */
+    font: inherit;
+    border: 1.5px solid #0e4f1f;
+    padding: 8px;
+    border-radius: 8px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.button:hover,
+.button:active {
+    background: white;
+    color: #0e4f1f;
+}
+
 /* h1 {
     font-family: sans-serif;
 } */
