--- a/main.css
+++ b/main.css
@@ -101,19 +101,52 @@ body {
 }
 
 /* Remove blue outline */
-.button:focus{
+
+.button:focus {
     outline: none;
 }
 
-#key-features{
+#key-features {
     background: #ff1b68;
     margin-top: 80px;
     padding: 16px;
 }
 
-#key-features .section-title{
+#key-features .section-title {
     color: white;
     margin: 32px;
+}
+
+.key-feature-list {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+}
+
+.key-feature {
+    display: inline-block;
+    width: 30%;
+    /* All aligned to the top */
+    vertical-align: top;
+}
+
+.key-feature__image {
+    background: #ffcede;
+    width: 128px;
+    height: 128px;
+    border: 2px solid #424242;
+    /* Get perfect circle */
+    border-radius: 50%;
+    /* Center horizontal trick, automatically fill the available space to left and right equaly */
+    margin: 0 auto;
+}
+
+.key-feature__description {
+    text-align: center;
+    font-weight: bold;
+    color: white;
+    font-size: 20px;
 }
 
 /* h1 {
