--- a/shared.css
+++ b/shared.css
@@ -15,6 +15,8 @@ body {
     width: 100%;
     background-color: #1f9e41;
     padding: 8px 16px;
+    /* header fixed */
+    position: fixed;
 }
 
 .main-header>div {
@@ -88,7 +90,7 @@ body {
     border: none;
 }
 
-.main-footer {    
+.main-footer {
     background: black;
     padding: 32px;
     margin-top: 48px;
@@ -107,7 +109,7 @@ body {
 }
 
 .main-footer__link a {
-    color:white;
+    color: white;
     text-decoration: none;
 }
 
