--- a/packages/packages.css
+++ b/packages/packages.css
@@ -2,6 +2,17 @@ main {
     padding-top: 32px;
 }
 
+.background {
+    background: url('../images/plans-background.jpg');
+    /* The element is positioned relative to the browser window */
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    /* z-index: needs the element to have "position" */
+    z-index: -1;
+    /* -1: moves behind the image */
+}
+
 .package {
     width: 80%;
     margin: 16px 0;
