--- a/packages/packages.css
+++ b/packages/packages.css
@@ -18,6 +18,7 @@ main {
     margin: 16px 0;
     border: 4px solid #0e4f1f;
     border-left: none;
+    position: relative;
 }
 
 .package:hover,
@@ -32,6 +33,19 @@ main {
     /* ensure that the anchor tag take all the avaible width of the surrounding section */
     display: block;
     padding: 32px;
+}
+
+.package__badge {
+    /* The element is positioned relative to its first positioned (not static) ancestor element	 */
+    /* if not positioned elements, then the HTML will be its relative position */
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin: 20px;
+    font-size: 12px;
+    color: white;
+    background: #ff5454;
+    padding: 8px;
 }
 
 .package__subtitle {
